--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <form 
   method="POST" 
-  action="https://script.google.com/macros/s/AKfycbxHtcimFEeZI5pmE-FpxcChtWbsVSSRJIZBP_34Y7RRGVyQ6LeL78bheCCyFQhw9p88Jg/exec"
+  action="https://script.google.com/a/macros/goa.bits-pilani.ac.in/s/AKfycbzMAOuzO4l7z9Cr3P2w8_qQErPbdClCtMxUkpwwZvaAdy6qeWp_U8utNGKwxY5WPzt3WQ/exec"
 >
   <input name="Email" type="email" placeholder="Email" required>
   <input name="Name" type="text" placeholder="Name" required>
